feat(policy-chain-factory): build policy chain related to a composite policy